[package]
name = "rrdbc"
version = "0.2.2"
authors = ["MDGSF"]
edition = "2021"
description = "dbc parser"
readme = "README.md"
repository = "https://github.com/MDGSF/rdbc"
license = "MIT OR Apache-2.0"
keywords = ["dbc", "parser", "format"]
categories = ["embedded", "no-std", "encoding", "parsing"]
rust-version = "1.74"

[features]
default = ["bin", "serde"]
# Used to build the CLI tool
bin = [
    "dep:anyhow",
    "dep:clap",
    "dep:env_logger",
    "dep:serde_json",
    "encoding",
    "serde",
]
# Support re-coding from different encodings (e.g. Windows-1252)
encoding = ["dep:encoding_rs"]
# Add support for serde serialization
serde = ["dep:serde"]

[dependencies]
anyhow = { version = "1.0.88", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
encoding_rs = { version = "0.8.34", optional = true }
env_logger = { version = "0.11.5", optional = true }
log = "0.4.22"
nom = "8.0"
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
#unwrap_used = "warn"  # TODO: fix and enable
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Temporary allow - these should be fixed eventually, or at least considered
missing_errors_doc = "allow"  # 190
must_use_candidate = "allow"  # 4
missing_panics_doc = "allow"  # 4
multiple_crate_versions = "allow"  # 2
cast_precision_loss = "allow"  # 2
too_many_lines = "allow"  # 1
